[gd_scene load_steps=10 format=3 uid="uid://dwmhxf24nkryy"]

[ext_resource type="Script" uid="uid://d1kgmhgig5vwx" path="res://Screens/Game.gd" id="1_awhwq"]
[ext_resource type="Texture2D" uid="uid://nkyhp72em884" path="res://icon.svg" id="2_plu8p"]
[ext_resource type="Script" uid="uid://ckx6uq8775bcx" path="res://Screens/player.gd" id="2_tban2"]
[ext_resource type="Texture2D" uid="uid://bu2bh3ppykvq7" path="res://Assets/tempcomputer.webp" id="3_4x0cx"]
[ext_resource type="Texture2D" uid="uid://cw1w6q60bnr15" path="res://Assets/tempfireplace.webp" id="4_tban2"]
[ext_resource type="Texture2D" uid="uid://du74fntr3vmdm" path="res://Assets/firewood.jpg" id="6_410mh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_410mh"]
radius = 78.27

[sub_resource type="CircleShape2D" id="CircleShape2D_tban2"]
radius = 526.87

[sub_resource type="CircleShape2D" id="CircleShape2D_6tqv4"]
radius = 253.81

[node name="GameScene" type="Node2D" node_paths=PackedStringArray("coldness_bar", "player")]
script = ExtResource("1_awhwq")
coldness_bar = NodePath("ProgressBar")
player = NodePath("CharacterBody2D")

[node name="Label" type="Label" parent="."]
offset_left = 39.0
offset_top = 35.0
offset_right = 447.0
offset_bottom = 224.0
text = "Game"

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(167, 348)
script = ExtResource("2_tban2")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
texture = ExtResource("2_plu8p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_410mh")

[node name="Holding" type="Node2D" parent="CharacterBody2D"]

[node name="Actionables" type="Node" parent="."]

[node name="Computer" type="TextureButton" parent="Actionables"]
offset_left = 41.0
offset_top = 18.0
offset_right = 515.0
offset_bottom = 492.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_4x0cx")

[node name="Fireplace" type="TextureButton" parent="Actionables"]
offset_left = 733.0
offset_right = 1207.0
offset_bottom = 474.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_tban2")

[node name="Area2D" type="Area2D" parent="Actionables/Fireplace"]
position = Vector2(244, 234)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actionables/Fireplace/Area2D"]
shape = SubResource("CircleShape2D_tban2")

[node name="Firewood" type="Node2D" parent="Actionables"]
position = Vector2(534, 593)

[node name="Sprite2D" type="Sprite2D" parent="Actionables/Firewood"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_410mh")

[node name="Area2D" type="Area2D" parent="Actionables/Firewood/Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actionables/Firewood/Sprite2D/Area2D"]
shape = SubResource("CircleShape2D_6tqv4")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_right = 341.0
offset_bottom = 27.0
value = 100.0

[connection signal="pressed" from="Actionables/Computer" to="." method="_on_computer_pressed"]
[connection signal="body_entered" from="Actionables/Fireplace/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Actionables/Fireplace/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Actionables/Firewood/Sprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Actionables/Firewood/Sprite2D/Area2D" to="." method="_on_area_2d_body_exited"]
